--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
 
 <body>
     <div class="pre-container">
-        <div class="center"></div>
-        <div class="line l-1"></div>
-        <div class="line l-2"></div>
-        <div class="square s-1"></div>
-        <div class="square s-2"></div>
-
-
+        <div class="main">
+            <div class="center"></div>
+            <div class="line l-1"></div>
+            <div class="line l-2"></div>
+            <div class="square s-1"></div>
+            <div class="square s-2"></div>
+        </div>
     </div>
 </body>
 
